testcases/error/fixed_type_with_signed_modifier.veryl
module fixed_type_with_signed_modifier {
    let _a: signed u32 = 0;
}
